--- a/text/ch4-gemini.tex
+++ b/text/ch4-gemini.tex
@@ -161,18 +161,18 @@ Kahaly \textit{et al} show a linear relationship between main pulse delay relati
 
 \section{Beyond GEMINI PW}\label{sec:ch4-beyond}
 % TODO chapter summary
-Vulcan 2020
+This experiment will hopefully be only the start. Contrast measurements will certainly be interesting and influential if cracked.
 
 Expand the range of targets A range of thick, flat solid targets are proposed to probe the density parameter space: diamond, a selection of plastics (polymethyl methacrylate, low and high-density polyethylene and polycarbonate) and mirrored targets, which produced interesting and slightly unexpected results in the ORION experiment. It would also be interesting to produce foam targets gaining access to the optimal low $S$ regime \cite{bataniPhysicsIssuesShock2014}.
 
-Image the XUV harmonics from the attosecond electron bunches.
+It is indispensable, to test the new predictions for oblique incidence energy scalings and total electron bunch charge along with the angle of bunch ejection, the non-zero transverse vector potential of the laser will prevent the bunch from propagating directly along the transmission axis. It would also be useful to perform a parameter scan of the preplasma scale length. In this work so far, it was assumed that the optima for electron bunch production are simply those for \ac{HHG}, as was shown to be true for preplasma scale length in the Supplementary Information of \cite{thevenetVacuumLaserAcceleration2016} for their electron bunches in reflection. To truly demonstrate the attosecond duration of the ZVP electron bunches would require imaging of their XUV CTR harmonics.
 
-Write about PIC simulations here.
+The return of HHG study to CLF after more than a decade hiatus is certainly indicative of a wider renewed interest in the field, perhaps spurred on by the recent Nobel Prize for attosecond physics and the rapid adoption of multi-petawatt class faciliites. Vulcan 20-20 is only around the corner. Set to be the worlds most powerful laser, this ambitious laser facility will provide 200 J in 20 fs. With the capability to access triple digits of peak normalised vector potentials it is ideally suited to the study of X-ray HHG and ZVP. This experiment will build expertise providing poof of principle results with a bright future in mind.
 
-Measuring the HHG from attosecond electron bunches.
+Perhaps in the summary of work of the thesis (new chapter), note that some of the actions laid out by Savin in his future work have been achieved, ie, experiment to measure ZVP electron bunches and theoretical model for the scaling of absorption efficiency with S
 
-It is indispensable, to test the new predictions for oblique incidence energy scalings and total electron bunch charge along with the angle of bunch ejection, the non-zero transverse vector potential of the laser will prevent the bunch from propagating directly along the transmission axis. It would also be useful to perform a parameter scan of the preplasma scale length. In this work so far, it was assumed that the optima for electron bunch production are simply those for \ac{HHG}, as was shown to be true for preplasma scale length in the Supplementary Information of \cite{thevenetVacuumLaserAcceleration2016} for their electron bunches in reflection.
-
+%TODO add a comment about the use of HHG as a heating source, highly efficient highly penetrating
+% TODO hyades (hmm no maybe PIC? but then cant do heating effect.. can use heaths code for tempeerature in smilei) sim of ORION hhg beam entering a plasma and heating vs ORION laser.
 
 
 % TODO add optimal HHG conditions somewhere
