--- a/text/ch1-intro.tex
+++ b/text/ch1-intro.tex
@@ -344,6 +344,8 @@ corresponding to a speed, $u \ge 0.87 c$. \textit{Ultra-relativistic} implies th
 \end{equation}
 The field will accelerate an electron to relativistic velocities in a distance less than 1 \% of a corresponding laser pulse wavelength.
 
+Upon entrance to the relativistic regime, the motion of an electron fundamentally changes. Consider Equation \ref{eq:intro-Lorentz_force}. For non-relativistic laser pulses, the magnetic field component can be neglected and the electron will simply oscillate along the electric field vector direction. Once electron velocities approach $c$, this approximation is no longer valid, electron velocities are rotated in the magnetic field and are accelerated along the laser propagation direction. In a plasma, this enables compression of a surface since ions are accelerated inwards in longitudinal electric fields from the induced electron-ion separation.
+
 \subsection{Conservation of generalised transverse momentum}\label{sec:intro_conservation-generalised-mometum}
 Consider a holonomic system of $N$ relativistic particles under the influence of electromagnetic forces. A particle $j$ with charge $e_j$ and mass $m_j$ experiences a scalar potential,
 \begin{equation}
@@ -551,5 +553,65 @@ The final instabililty that shall be discussed is the \textit{finite grid instab
 	B = \frac{u}{\omega_p \Delta x},
 \end{equation}
 where $u$ is the beam speed. While their theory predicts stability for $B > 0.25$, Brackbill \textit{et al} \cite{brackbillEnergyMomentumConservation2016} observed instability growth for all beam temperatures in their simulations, although they found the percentage error is a small fraction for $B>10$.
+
+\section{Powering the interaction}
+Two experiments are discussed in this thesis, one performed on ORION, one planned on GEMINI. Both are PW class facilities. Their typical beam parameters are presented in Table \ref{tab:laser_params}.
+\begin{table}[]
+	\centering
+	\begin{tabular}{lccc}
+		\hline \hline
+		Parameter                & \multicolumn{2}{c}{ORION} & GEMINI \\ 
+		Beamlines                & SP1         & SP2         & N \& S  \\ \hline
+		Power (PW)               & 0.5         & 1           & 0.5    \\
+		Energy (J)               & 200         & 500         & 12     \\
+		Wavelength (nm)          & 527         & 1053        & 800    \\
+		Parabola, $f/\#$ & $f/3$        & $f/3$        & $f/2$      \\
+		Focal spot FWHM ($\mu$m) & < 20        & < 10        & 2      \\
+		Duration (fs)            & 500         & 500         & 40     \\
+		Shot rate                & 5/day       & 5/day       & 3/min  \\
+		Peak $a_0$ (approx)      & 10          & 30          & 24    \\ \hline \hline
+	\end{tabular}
+	\caption{The ORION and GEMINI petawatt class short pulse beamlines for comparison. The GEMINI North (N) and South (S) beamlines are equivalent.}
+	\label{tab:laser_params}
+\end{table}
+The GEMINI-PW laser facility of the \ac{CLF} at Harwell Campus, Oxfordshire is a petawatt class facility consisting of two 30 fs beams, \ac{N} and \ac{S}, each delivering a maximum focused intensity of \qty{2e21}{W.cm^{-2}} at a repetition rate of 0.05 Hz. Such a high frequency of operation has led to a paradigm shift in high-power laser physics experimentation with the arrival of statistically significant results.
+
+The ORION SP1 is produced by passing the SP2 through two frequency doubling crystals creating two equivalent beamlets that are then overlaid at the target. The double beamlet structure at the near-field is imaged in Figure \ref{fig:oriondoublebeamletsnearfield}.
+\begin{figure}
+	\centering
+	\includegraphics[width=0.5\linewidth]{figures/orion/orion_doublebeamlets_near_field}
+	\caption[Image of the ORION SP1 double beamlet structure in the near-field.]{Image of the ORION SP1 double beamlet structure in the near-field. The two beamlets are then superimposed on the target.}
+	\label{fig:oriondoublebeamletsnearfield}
+\end{figure}
+
+The ORION SP2 beamline intensity temporal profile can be modelled as
+\begin{equation}\label{eq:orion_SP2_temporal}
+	I_\mathrm{SP2} \sim (I_{0 \ \mathrm{p}}\sech(t/t_\mathrm{p})^2 + I_{0 \ \mathrm{pp}}e^{-(t/t_\mathrm{pp})^2} + I_{0 \ \mathrm{ps}}e^{-\mathrm{abs}(t)/t_\mathrm{ps}} + I_{0 \ \mathrm{ns}}e^{-(t/t_\mathrm{ns})^8}),
+\end{equation}
+where the constants are detailed in Table \ref{tab:orion_pedestals} \cite{dhillierModelORIONContrast2022}.
+\begin{table}[]
+	\centering
+	\begin{tabular}{lcc}
+		\hline\hline
+		Pedestal, $i$                & $I_{0 \ i}$ & $t_i$  \\ \hline
+		Main pulse, p                & 1           & 0.2 ps \\
+		Picosecond pump residual, pp & $10^{-3}$   & 3 ps   \\
+		Picosecond pedestal, ps      & \num{5e-5}  & 8 ps   \\
+		Nanosecond pedestal, ns      & $10^{-11}$  & 3 ns  \\ \hline \hline
+	\end{tabular}
+	\caption{The native ORION SP2 pulse and prepulse pedestal constants as defined in Equation \ref{eq:orion_SP2_temporal}.}
+	\label{tab:orion_pedestals}
+\end{table}
+The picosecond pump residual arises from parametric fluorescence in the ps OPA, the picosecond pedestal from scatter in the stretchers and noise on the OPA pump laser and the nanosecond pedestal from parametric fluorescence from the nanosecond OPAs. 
+% TODO understand the above, perhaps add more comments
+The SP1 temporal intensity profile is
+\begin{equation}
+	I_\mathrm{SP1} \sim (I_\mathrm{SP2}^2 + I_\mathrm{SP2} \times 10^{-8}).
+\end{equation}
+The second term is due to the limitations of the harmonic separation system. The frequency doubling mechanism is not 100 \% efficient, \textit{i.e.} some of SP2 beamline remains and must be filtered out. The main pulse of the GEMINI beamlines is more appropriately modelled as a Gaussian.
+% TODO add a plot of the Gemini contrast
+
+\subsection{Laser contrast}
+% TODO In here add details about laser contrast and PMs
 
 % TODO: \textbf{INTRO CONCLUSION}
