--- a/references.bib
+++ b/references.bib
@@ -1012,6 +1012,35 @@
   file = {/Users/robintimmis/Zotero/storage/239YL53X/PhysRevLett.124.185004.pdf}
 }
 
+@article{edwardsEnhancedAttosecondBursts2014,
+  title = {Enhanced Attosecond Bursts of Relativistic High-Order Harmonics Driven by Two-Color Fields},
+  author = {Edwards, Matthew R. and Platonenko, Victor T. and Mikhailova, Julia M.},
+  date = {2014-12-15},
+  journaltitle = {Optics Letters},
+  shortjournal = {Opt. Lett.},
+  volume = {39},
+  number = {24},
+  pages = {6823},
+  issn = {0146-9592, 1539-4794},
+  doi = {10.1364/OL.39.006823},
+  langid = {english}
+}
+
+@article{edwardsWaveformControlledRelativisticHighOrderHarmonic2016,
+  title = {Waveform-{{Controlled Relativistic High-Order-Harmonic Generation}}},
+  author = {Edwards, Matthew R. and Mikhailova, Julia M.},
+  date = {2016-09-16},
+  journaltitle = {Physical Review Letters},
+  shortjournal = {Phys. Rev. Lett.},
+  volume = {117},
+  number = {12},
+  pages = {125001},
+  issn = {0031-9007, 1079-7114},
+  doi = {10.1103/PhysRevLett.117.125001},
+  langid = {english},
+  file = {/Users/robintimmis/Zotero/storage/9QZ3EX4R/Edwards and Mikhailova - 2016 - Waveform-Controlled Relativistic High-Order-Harmon.pdf}
+}
+
 @article{edwardsXRayEmissionEffectiveness2020,
   title = {The {{X-Ray Emission Effectiveness}} of {{Plasma Mirrors}}: {{Reexamining Power-Law Scaling}} for {{Relativistic High-Order Harmonic Generation}}},
   author = {Edwards, Matthew R. and Mikhailova, Julia M.},
@@ -2019,6 +2048,13 @@
   issn = {00224073},
   doi = {10.1016/0022-4073(94)90078-7},
   langid = {english}
+}
+
+@letter{larsenQuestionSourceWave2023,
+  type = {E-mail},
+  title = {Question about Source Wave Polarisation ({{HYADES}})},
+  author = {Larsen, John},
+  year = {09.03.23}
 }
 
 @online{LaserSystemGemini,
