--- a/text/ch3-orion.tex
+++ b/text/ch3-orion.tex
@@ -257,14 +257,14 @@ this determines the new peak intensity yielded by hole boring.
 % TODO come back to this section.......
 Include plots and fits for near roll-off.
 
-\subsection{SHHG optimal parameter space}
-The interest in SHHG has prompted many numerical and experimental studies to determine its optimal parameter space. The interaction efficiency increases with laser pulse intensity \cite{pukhovRelativisticHighHarmonics2009, edwardsXRayEmissionEffectiveness2020} with a relativistic similarity parameter close to unity being preferable \cite{edwardsXRayEmissionEffectiveness2020, gonoskovUltrarelativisticNanoplasmonicsRoute2011}. The effective similarity parameter can be reduced with a finite preplasma scale length. The transverse coherence of the incident beam should be as good as possible to mitigate phase errors, this is best achieved with a diffraction limited beam \cite{dromeyHighHarmonicGeneration2006}. While HHG in transmission from thin foils is the optimum for currently accessible laser pulse intensities, HHG in reflection is more efficient for next generation systems \cite{edwardsElectronNanobunchWidthDominatedSpectralPower2020}. 
+\subsection{The SHHG optimal parameter space}
+Interest in SHHG has prompted many numerical and experimental studies for the determination of its optimal parameters. The interaction efficiency increases with laser pulse intensity \cite{pukhovRelativisticHighHarmonics2009, edwardsXRayEmissionEffectiveness2020} with a relativistic similarity parameter close to unity being preferable \cite{edwardsXRayEmissionEffectiveness2020, gonoskovUltrarelativisticNanoplasmonicsRoute2011}. The effective similarity parameter can be reduced with a finite preplasma scale length. The transverse coherence of the incident beam should be as good as possible to mitigate phase errors, this is best achieved with a diffraction-limited beam \cite{dromeyHighHarmonicGeneration2006}. While HHG in transmission from thin foils is the optimum for currently accessible laser pulse intensities, HHG in reflection is more efficient for next-generation systems \cite{edwardsElectronNanobunchWidthDominatedSpectralPower2020}. 
 
 One might assume that target surface variation, root-mean-square roughness, $\Delta s$, need be less than the highest harmonic order that one wished to generate. However, Dromey \textit{et al} demonstrated categorically in both experiment and simulation that surface roughness need only be less than the excursion amplitude of the oscillating electrons at the target front surface thus ensuring specular reflection and preventing scattering into the wings of the harmonic beam \cite{dromeyDiffractionlimitedPerformanceFocusing2009}. This is generally satisfied by $\Delta s \ll \lambda_\mathrm{L}$. In their experiment, harmonics were visible provided $\Delta s < \lambda_\mathrm{L}/16$. Note that futhermore preplasma expansion will lead to an increase in target smoothness before the main pulse arrival. 
 
 There is some debate regarding the angle of incidence with simulation parameter scans finding optima ranging from 45-\qty{62}{\degree} \cite{edwardsXRayEmissionEffectiveness2020, thauryHighorderHarmonicAttosecond2010, gonoskovUltrarelativisticNanoplasmonicsRoute2011}. However, all can agree that normal is not preferable. For ideal normal incidence odd harmonics are suppressed \cite{lichtersShortpulseLaserHarmonics1996}. Even harmonics are suppressed for s-polarised incident light due to the symmetry of the interaction \cite{dollarEnhancedLaserAbsorption2017} while circularly polarised light significantly suppresses the entire mechanism \cite{savinAttosecondscaleAbsorptionExtreme2017}. This led to the suggestion of polarisation gating for the generation of isolated attosecond pulses \cite{yeungDependenceLaserDrivenCoherent2014}. 
 
-Waveform tailoring with the inclusion of multiple laser wavelengths can improve HHG efficiency \cite{edwardsWaveformControlledRelativisticHighOrderHarmonic2016}. Simulations have suggested the production of denser electron bunches and stronger acceleration for two colour pulses \cite{edwardsEnhancedAttosecondBursts2014} and has been confirmed in experiment \cite{yeungExperimentalObservationAttosecond2017}. Interestingly the polarisations of the two colours must be identical, this is the inversve of HHG from gases.
+Waveform tailoring with the inclusion of multiple laser wavelengths can improve HHG efficiency \cite{edwardsWaveformControlledRelativisticHighOrderHarmonic2016}. Simulations have suggested the production of denser electron bunches and stronger acceleration for two colour pulses \cite{edwardsEnhancedAttosecondBursts2014} and has been confirmed in experiment \cite{yeungExperimentalObservationAttosecond2017}. Interestingly the polarisations of the two colours must be identical, this is the inverse of HHG from gases.
 
 High-power laser systems have inherent prepulses of ionising intensities. They will preheat a target leading to thermal expansion prior to the arrival of the main pulse, producing an exponential preplasma, $n_\mathrm{e} \sim e^{x/L}$. HHG is exceedingly sensitive to this preplasma formation, evoking particular interest in the field \cite{behmkeControllingSpacingAttosecond2011, rodelHarmonicGenerationRelativistic2012, dollarScalingHighorderHarmonic2013, kahalyDirectObservationDensityGradient2013, vincentiAchievingExtremeLight2019,behmkeControllingSpacingAttosecond2011}. While there is some variation in quoted optimal values, they are generally small relative to the laser wavelength, with scale lengths, $L \approx 0.1 \lambda_\mathrm{L}$. The difficulty in measuring such small lengths perhaps goes some of the way to explain the variety of suggested optima. 
 
@@ -747,8 +747,15 @@ Comment on flying focus
 
 % TODO Note that Equation \ref{eq:I_n_hhg} only takes into account the contribution from one gamma spike. In general, and especially for the long pulse duration on ORION, the slow envelope of the spectrum is unchanged \cite{baevaHighHarmonicGeneration2008} but there can be destructive interference between spikes leading to modulations in the spectrum for specific harmonics. This can lead to certain orders vanishing such as is the case for even order harmonics in the case of s-polarisation (https://pubs.aip.org/aip/pop/article-abstract/3/9/3425/442980/Short-pulse-laser-harmonics-from-oscillating). This results from symmetries in the equations of motion (insert ref to Raoul Trines paper here).
 
+\section{Summary}
+This chapter has described in full the experimental methods and results of the recent ORION experiment. The X-ray harmonic intensities were measured using the OHREX spectrometer. Finding X and X. To descibe the results, the ROM model of SHHG was laid out, combining all pieces of the puzzle to reconstruct the measured intensities analytically. The experimental campaign was supported by PIC and hydrodynamic simulations of the main pulse and prepulse interactions respectively. PIC simulations agree with the analytical results for the ORION parameter space. No preplasma expansion was observed for the SP1 beamline and reasonable preplasma scale lengths for the SP2 beamline provided the use of a single PM optic. Some discussion of plasma temperature was provided.
 
-ADD MOST EFFICIENT HHG CONDITIONS SECTION - 30 mins
+SUmmery of the X-ray harmonic beam produced: include efficiencies, include duration
+
+
+
+
+ADD MOST EFFICIENT HHG CONDITIONS SECTION - 30 mins - done
 Go through the HYADES section - 30 mins - done
 Harmonic source size - 30 mins
 Finish off discussion of results - 30 mins
